# p_airflow

./: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: api_to_postgres.py  main.py  minha_primeira_dag.py
frontend/pipeline/: pipeline.py
include/: db.py
