[tool.poetry]
name = "p-airflow"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
loguru = "^0.7.2"
streamlit = "^1.39.0"
pandas = "^2.2.3"
apache-airflow = "^2.10.2"
pytest = "^8.3.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
